# hope-re

./: .gitattributes  .gitignore  CHANGELOG.md  GLAZE_PROTECTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  SECURITY.md  SECURITY_SUMMARY.md  USAGE_GUIDE.md  eslint.config.mjs  jsrepo.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: lint.yml  publish.yml  upload-models.yml
src/: app.css
src-models/: requirements.txt
src-models/models/: hope_config.json  nightshade_algorithm.onnx
src-models/notebooks/: 0_setup_colab.ipynb  1_clip_to_jax.ipynb  2_noise_algorithm.ipynb  3_glaze_algorithm.ipynb  4_nightshade_algorithm.ipynb  5_export_onnx.ipynb
src-tauri/: Cargo.toml  Dgit-projectshope-resrc-tauritargetmetadata.json  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  onnx_stubs.rs
src-tauri/src/commands/: mod.rs  system_info.rs
src-tauri/src/onnx_integration/: capabilities.rs  mod.rs  model_downloader.rs  session.rs
src-tauri/src/onnx_integration/protection/: algorithms.rs  encoding.rs  mod.rs  model.rs  preprocessing.rs  spsa.rs  tiling.rs  types.rs
src-tauri/src/system_info/: cpu.rs  gpu.rs  memory.rs  mod.rs  platform.rs  storage.rs
src/lib/: constants.ts  utils.ts
src/lib/components/: index.ts
src/lib/components/decoration/: index.ts  window-title.svelte
src/lib/components/header/: index.svelte  index.ts  system-info-dialog.svelte  theme-toggle.svelte  update-button.svelte
src/lib/components/main/: index.ts
src/lib/components/main/image-placeholders/: base-image.svelte  image-fullscreen-dialog.svelte  index.ts  rendered-image.svelte  types.ts
src/lib/components/main/menu/: index.svelte  index.ts  types.ts
src/lib/components/main/resource-download/: index.ts  resource-download-guard.svelte
src/lib/components/minimized-dock/: index.ts  minimized-dock.svelte
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/components/updater/: index.ts  update-dialog.svelte
src/lib/queries/: index.ts  inference.ts  models.ts  protection.ts  system-info.ts  updater.ts
src/lib/stores/: system-info.svelte.ts  theme.svelte.ts  use-image.svelte.ts  use-model-download.svelte.ts  use-protection.svelte.ts  use-updater.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+36 files in other folders)
