[package]
name = "hope-ad"
version = "2.0.1"
description = "An AI-proofing arts app"
authors = [ "HopeADeff" ]
license = "MIT"
repository = "https://github.com/HopeADeff/hope-re"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hope_remade_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-os = "2.3.2"
tauri-plugin-store = "2.4.1"
sysinfo = "0.36.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Graphics_Dxgi",
  "Win32_System_Com"
] }
